# ffr-cms

./: .gitignore  Dockerfile  Makefile  README.md  brainstorm.ml  config.sexp  devtools.opam  docker-compose.yml  dune  dune-project  ffr-cms.opam  ffr-opium.opam  irmin.yml
.github/workflows/: docker-publish.yml
container/: Caddyfile  build-www.sh  checkout.sh  ffr-cms.sh  install.sh  serve-preview.sh  srv-main.sh  watch.sh
container/build-www/: main.sh  setup.sh
container/checkout/: checkout.sh  main.sh  setup.sh
container/cms/: main.sh  setup.sh
container/preview/: main.sh  setup.sh
lib/: config.ml  data.ml  dune  post.ml  store.ml  user.ml
migrate/: dune  id-diff.sh  import.ml  import.sh  kats-scraper.sh
setup/: on_change.sh  setup.sh
setup/systemd/: ffr-cms.service  ffr-opium.service  ffr-sync-build.service
src/: brainstorm.ml  dune
src/server/: dune  main.ml
src/set_user/: dune  main.ml
static/assets/: app.css
